# ml_forge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
ml_forge/: __main__.py  constants.py  main.py  state.py
ml_forge/engine/: autofill.py  blocks.py  generator.py  graph.py  metrics.py  run.py  training_setup.py
ml_forge/filesystem/: save.py
ml_forge/graph/: links.py  nodes.py  pipeline.py  tabs.py  undo.py
ml_forge/templates/: cifar10_classifier.mlf  mnist_classifier.mlf
ml_forge/ui/: console.py  layout.py  menubar.py  palette.py  resize.py  statusbar.py  summary.py  toolbar.py  training.py
